<resources>
    <string name="app_name">My Application00002.002.001</string>
    <string name="question">Question</string>
    <string name="randomGame">o\'zingizga maqul o\'yinni tanlang</string>
    <string name="math_games">Math game</string>
    <string name="flags_game">Flags game</string>
    <string name="country_game">Country game</string>
    <string name="ansver_one">Answer one</string>
    <string name="answer_two">Answer two</string>
    <string name="answer_three">Answer three</string>
    <string name="answer_four">Answer four</string>
    <string name="submit">Submit</string>
    <string name="Continue_games">Continue</string>
    <string name="Finish">Finish</string>
    <string name="true_answer">true answers:        %d/10</string>
    <string name="false_answers">false answers:     %d/10</string>
    <string name="number_question">number question:     %d</string>
    <string name="you_win">You win</string>
    <string name="You_lose">You lose</string>
    <string name="You_result_is_good">Your result is good</string>
    <string name="you_result_is_satisfactory">your result is satisfactory</string>
    <string name="menu">menu</string>
    <string name="try_again">Try again</string>
</resources>