<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".QuizTestMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_uchun_picture_3">

    <TextView
        android:id="@+id/true_answer_text"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_weight="1"
        android:textColor="@color/green"
        android:text="@string/true_answer"/>
    <TextView
        android:id="@+id/false_answer_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/false_answers"
        android:textColor="@color/red_red"
        android:layout_weight="1"
        android:textSize="20sp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/number_count_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/number_question"
        android:textSize="20sp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_height="0dp"
        android:layout_weight="9.7">
        <ImageView
            android:id="@+id/question_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/background_uchun_picture_3"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="5dp">

    <TextView
        android:layout_margin="10dp"
        android:id="@+id/question_text"
        android:textColor="#671919"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:hint="@string/question"
        android:textSize="20sp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:backgroundTint="@color/red"
        app:cardCornerRadius="30dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/answer_button_one"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/ansver_one"
        app:cornerRadius="30dp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:backgroundTint="@color/red"
        app:cardCornerRadius="30dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/answer_button_two"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/answer_two"
        app:cornerRadius="30dp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:backgroundTint="@color/red"
        app:cardCornerRadius="30dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/answer_button_three"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/answer_three"
        app:cornerRadius="30dp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:backgroundTint="@color/red"
        app:cardCornerRadius="30dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/answer_button_four"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/answer_four"
        app:cornerRadius="30dp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:cardCornerRadius="30dp"
        android:layout_weight="2"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/red"
        android:layout_marginTop="40dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_next_or_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Continue_games"
            app:cornerRadius="30dp"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>