<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:orientation="vertical"
    android:background="@drawable/background_uchun_picture_3"
    android:gravity="center_horizontal">



    <ImageView
        android:id="@+id/score_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_weight="6"
        android:src="@drawable/background_uchun_picture_3"/>
    <TextView
        android:id="@+id/your_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:text="@string/you_win"
        android:textSize="50sp"/>

    <TextView
        android:id="@+id/score_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/true_answer"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/menu_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/red"
        app:cardCornerRadius="30dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="20dp"
            android:text="@string/menu"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/Try_again_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/red"
        app:cardCornerRadius="30dp"
        android:layout_marginLeft="100dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Try_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="20dp"
            android:text="@string/try_again"/>
    </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>